objects/SVMXC__Service_Template__c.object
<CustomObject>
    <description>Warranty Template allows organizations to define and standardize their warranty offering and apply it for a range of products automatically. A warranty template can be used to define the type and scope of coverage in a warranty such as parts, labor and expenses, and can then be associated with one or more products. When installed product records are created in ServiceMax, warranty will be calculated automatically based on the pre-defined warranty template associated with the product.</description>
    <fields>
        <fullName>Product_Warranty_Triggering_Date__c</fullName>
        <description>Product Warranty Triggering Date</description>
        <label>Product Warranty Triggering Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commissioning Date / Install Date</fullName>
                </value>
                <value>
                    <fullName>Date Shipped</fullName>
                </value>
                <value>
                    <fullName>Purchased Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__All_Products_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if all products involved in the repair will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if all products involved in the repair will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Products Covered(DO NOT USE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__All_Services_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if all services performed will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if all services performed will be covered by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>All Services Covered(DO NOT USE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Coverage_Effective_From2__c</fullName>
        <description>Specify the date field name from Installed Product object to be considered in warranty creation.</description>
        <inlineHelpText>Specify the date field name from Installed Product object to be considered in warranty creation.</inlineHelpText>
        <label>Coverage Effective From</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Coverage_Effective_From__c</fullName>
        <description>Specify the date field name from Installed Product object to be considered in warranty creation.</description>
        <inlineHelpText>Specify the date field name from Installed Product object to be considered in warranty creation.</inlineHelpText>
        <label>Coverage Effective From(DO NOT USE)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ship Date</fullName>
                </value>
                <value>
                    <fullName>Install Date</fullName>
                </value>
                <value>
                    <fullName>Entry Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Duration_of_Expenses__c</fullName>
        <description>A number indicating the duration of coverage for expenses</description>
        <inlineHelpText>A number indicating the duration of coverage for expenses</inlineHelpText>
        <label>Duration of Expenses Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Duration_of_Material_Coverage__c</fullName>
        <description>A number indicating the duration of coverage for parts</description>
        <inlineHelpText>A number indicating the duration of coverage for parts</inlineHelpText>
        <label>Duration of Material Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Duration_of_Time_Coverage__c</fullName>
        <description>A number indicating the duration of coverage for labor</description>
        <inlineHelpText>A number indicating the duration of coverage for labor.</inlineHelpText>
        <label>Duration of Labor Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Exchange_Type__c</fullName>
        <description>Type of exchange allowed as per the warranty template</description>
        <label>Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Exclusions__c</fullName>
        <description>A free format text to define any exceptions not covered by the standard coverage of the template</description>
        <inlineHelpText>Define any exceptions not covered by the standard coverage of the template</inlineHelpText>
        <label>Exclusions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Expenses_Covered__c</fullName>
        <description>A number between 1 and 100 indicating the percentage of coverage on expenses</description>
        <inlineHelpText>A number between 1 and 100 indicating the percentage of coverage on expenses</inlineHelpText>
        <label>Expenses % Covered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Invoice_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if an invoice is always raised at the end of service delivery. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if an invoice is always raised at the end of service delivery. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Invoice Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Loaner_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if customer is given a temporary replacement product when the covered product is under repair. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if customer is given a temporary replacement product when the covered product is under repair. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Loaner Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Material_Covered__c</fullName>
        <description>A number between 1 and 100 indicating the percentage of coverage on parts</description>
        <inlineHelpText>A number between 1 and 100 indicating the percentage of coverage on parts</inlineHelpText>
        <label>Material % Covered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Repair__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if customer is eligible for onsite repair when entitled by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if customer is eligible for onsite repair when entitled by this warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Onsite Repair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__RMA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if an RMA is always required or an RMA is implied when this warranty is used to entitle a customer. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if an RMA is always required or an RMA is implied when this warranty is used to entitle a customer. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>RMA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Shipment_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if customer shipments are covered by the warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if customer shipments are covered by the warranty. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Shipment Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Template_Type__c</fullName>
        <description>Indicates if this template is used for warranty calculation or referred in service contracts. When creating warranty for installed products, only templates with type Warranty are considered</description>
        <inlineHelpText>Indicates if this template is used for warranty calculation or used as a reference in service contracts. When creating warranty for installed products, only templates with type Warranty are considered</inlineHelpText>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty</fullName>
                    <default>true</default>
                    <label>Warranty</label>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Time_Covered__c</fullName>
        <description>A number between 1 and 100 indicating the percentage of coverage on labor</description>
        <inlineHelpText>A number between 1 and 100 indicating the percentage of coverage on labor</inlineHelpText>
        <label>Labor % Covered</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Transferable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if this warranty is transferable to other products under special circumstances. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if this warranty is transferable to other products under special circumstances. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Transferable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Unit_of_Time_Expenses__c</fullName>
        <description>Combined with duration of coverage, this qualifies the expenses coverage duration in days, weeks, months or years</description>
        <inlineHelpText>Combined with duration of coverage, this qualifies the expenses coverage duration in days, weeks, months or years</inlineHelpText>
        <label>Unit of Time for Expenses Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Unit_of_Time_Material__c</fullName>
        <description>Combined with duration of coverage, this qualifies the material coverage duration in days, weeks, months or years</description>
        <inlineHelpText>Combined with duration of coverage, this qualifies the material coverage duration in days, weeks, months or years</inlineHelpText>
        <label>Unit of Time for Material Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Unit_of_Time__c</fullName>
        <description>Combined with duration of coverage, this qualifies the labor coverage duration in days, weeks, months or years</description>
        <inlineHelpText>Combined with duration of coverage, this qualifies the labor coverage duration in days, weeks, months or years</inlineHelpText>
        <label>Unit of Time for Labor Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Walk_in_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if the customer is authorized to walk into a service center for service. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if the customer is authorized to walk into a service center for service. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Walk-in Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_DuartionCalculation__c</fullName>
        <formula>IF( ISPICKVAL( SVMXC__Unit_of_Time_Material__c , &apos;Days&apos;),SVMXC__Duration_of_Material_Coverage__c ,  
IF(ISPICKVAL( SVMXC__Unit_of_Time_Material__c , &apos;Weeks&apos;),SVMXC__Duration_of_Material_Coverage__c*7,  
IF(ISPICKVAL( SVMXC__Unit_of_Time_Material__c , &apos;Months&apos;),SVMXC__Duration_of_Material_Coverage__c*30, 
IF(ISPICKVAL( SVMXC__Unit_of_Time_Material__c , &apos;Years&apos;),SVMXC__Duration_of_Material_Coverage__c*365, Null) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_DuartionCalculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warranty_Terms_External__c</fullName>
        <description>Warranty Terms External</description>
        <externalId>true</externalId>
        <label>Warranty_Terms_External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Warranty Terms</label>
    <listViews>
        <fullName>SVMXC__All_Warranty_Terms</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Duration_of_Material_Coverage__c</columns>
        <columns>SVMXC__Coverage_Effective_From2__c</columns>
        <columns>SVMXC__Material_Covered__c</columns>
        <columns>SVMXC__Time_Covered__c</columns>
        <columns>SVMXC__Expenses_Covered__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Warranty Terms</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranty Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SVMXC__Expenses_Duration_UoT_Check</fullName>
        <active>true</active>
        <description>If Expenses coverage % is specified, duration and unit of time should be specified too.</description>
        <errorConditionFormula>AND(NOT ISNULL( SVMXC__Expenses_Covered__c ), OR( ISNULL(  SVMXC__Duration_of_Expenses__c ), ISPICKVAL(  SVMXC__Unit_of_Time_Expenses__c , &quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>SVMXC__Unit_of_Time_Expenses__c</errorDisplayField>
        <errorMessage>Please specify the duration and unit of time of Expenses coverage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SVMXC__Labor_Duration_UoT_Check</fullName>
        <active>true</active>
        <description>If Labor coverage % is specified, duration and unit of time should be specified too.</description>
        <errorConditionFormula>AND(NOT ISNULL( SVMXC__Time_Covered__c ), OR( ISNULL(  SVMXC__Duration_of_Time_Coverage__c ), ISPICKVAL(  SVMXC__Unit_of_Time__c, &quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>SVMXC__Unit_of_Time__c</errorDisplayField>
        <errorMessage>Please specify the duration and unit of time of Labor coverage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SVMXC__Material_Duration_UoT_Check</fullName>
        <active>true</active>
        <description>If Material coverage % is specified, duration and unit of time should be specified too.</description>
        <errorConditionFormula>AND(NOT ISNULL(SVMXC__Material_Covered__c), OR( ISNULL( SVMXC__Duration_of_Material_Coverage__c ), ISPICKVAL( SVMXC__Unit_of_Time_Material__c, &quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>SVMXC__Unit_of_Time_Material__c</errorDisplayField>
        <errorMessage>Please specify the duration and unit of time of Material coverage.</errorMessage>
    </validationRules>
</CustomObject>